[package]
name = "buttplug-osc"
version = "0.1.0"
authors = ["AlexanderPavlenko <AlexanderPavlenko@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["rt-multi-thread", "macros"] }
buttplug = "3.0"
anyhow = "1.0"
nannou_osc = "0.15"
structopt = "0.3"
url = "2.2"
evmap = "10.0"
evmap-derive = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter", "fmt"] }
futures-util = "0.3"
